# AudioServer

./: Cargo.toml  Makefile  README.md
.github/workflows/: validator.yml
src/: audio_server.rs  audio_server.rs~  lib.rs  midi_sequencer.rs  prelude.rs  uni_source_variant.rs  uni_source_variant.rs~
src/audio_core/: mod.rs
src/audio_server/: impl_config.rs  impl_config_sequence.rs  impl_core_config.rs~  impl_core_exec.rs  impl_exec.rs  impl_exec_core.rs  impl_exec_ordinary.rs  mod.rs
src/audio_server/audio_core/: audio_core_parameters.rs  dummy_tinyaudio.rs  mod.rs
src/audio_server/midi_lib/: midi_message.rs  midi_message.rs~  midi_receiver.rs  midi_sequence.rs  mod.rs  symbol2midi.rs~
src/audio_server/midi_lib/midi_message/: impl_from_toml.rs  mod.rs
src/audio_server/midi_lib/midi_sequence/: impl_sequence_from_toml.rs  mod.rs
src/audio_server/midi_sequencer/: mod.rs
src/audio_server/synths/: mod.rs  rusty_synth_wrapper.rs  simple_synth.rs
src/audio_server/uni_source_variant/: impl_new.rs  impl_send_to_synth.rs  mod.rs
tests/: test_configs.rs
