[package]
name = "audio_server"
version = "0.0.1"
edition = "2021"

[lib]


[dependencies]
# raalog.workspace = true
# toml.workspace = true
toml = "0.8.8"
raalog = { git = "https://github.com/AlexanderARodin/raalog.git", tag="v0.2.0" }

tinyaudio = "0.1.1"
rustysynth = "1.2.0"

# call_list = { path = "../call_list" }
call_list = { git = "https://github.com/AlexanderARodin/call_list.git", branch="main" }


[features]
dummy_audio=[]

